# fundamentos_engenharia_software

./: .buildinfo  .gitignore  README.md  api.py  genindex.html  index.html  main.py  objects.inv  preprocessing_api.html  py-modindex.html  pyproject.toml  search.html  searchindex.js
.doctrees/: environment.pickle  index.doctree  preprocessing_api.doctree
.github/workflows/: documentation_ci.yml  main_ci.yml
_sources/: index.rst.txt
artifacts/: modelo_final.joblib
docs/source/: conf.py  preprocessing_api.rst
notebooks/: modelo final.ipynb
src/fundamentos_engenharia_software/: config.py  logging.py
src/fundamentos_engenharia_software/collect/: data_collect.py
src/fundamentos_engenharia_software/evaluation/: evaluation.py
src/fundamentos_engenharia_software/preprocessing/: data_cleaning.py  feature_engineering.py  impute_and_scale.py
src/fundamentos_engenharia_software/training/: modeling.py
tests/: test_feature_engineering.py  test_impute_and_scale.py
