[project]
name = "fundamentos_engenharia_software"
version = "0.1.0"
description = "Ambiente para projeto de fraude ML"
authors = [
    {name = "Luisa Muzzi",email = "luisamuzzi29@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "optuna (>=4.5.0,<5.0.0)",
    "pandas (>=2.3.2,<3.0.0)",
    "numpy (>=2.3.2,<3.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "matplotlib (>=3.10.5,<4.0.0)",
    "scikit-learn (>=1.7.1,<2.0.0)",
    "imbalanced-learn (>=0.14.0,<0.15.0)",
    "scikit-optimize (>=0.10.2,<0.11.0)",
    "ipykernel (>=6.30.1,<7.0.0)",
    "missingno (>=0.5.2,<0.6.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "pylint (>=4.0.5,<5.0.0)",
    "pytest (>=9.1.1,<10.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "cookiecutter-data-science (>=2.3.0,<3.0.0)",
    "black (>=26.5.1,<27.0.0)",
    "sphinx (>=9.1.0,<10.0.0)",
    "furo (>=2025.12.19,<2026.0.0)",
    "sphinx-autodoc-typehints (>=3.12.1,<4.0.0)"
]


[tool.black]
line-length = 79

[tool.pylint.'BASIC']
good-names = [
        "X", 
        "y", 
        "df", 
        "X_train", 
        "X_test", 
        "y_train", 
        "y_test", 
        "X_train_scaled", 
        "X_test_scaled",
        "X_train_num",
        "X_test_num",
        "X_train_imputed",
        "X_test_imputed",
        "X_train_copy",
        "X_test_copy",
        "X_train_top",
        'X_copy',
        'X_invalid'
        ]